log
Wed 15 May 2024 10:43:44 PM UTC: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
69bdfdf
Wed 15 May 2024 10:45:48 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
b521141
Thu 16 May 2024 12:20:02 AM UTC: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
18fa850
Thu 16 May 2024 12:20:56 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:119:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  119 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
52ebbfe
